[gd_scene load_steps=2 format=3 uid="uid://driavqeeh2psj"]

[ext_resource type="Script" path="res://Objects/ReferenceGuideText.gd" id="1_yu732"]

[node name="ReferenceMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReferenceGuideText" type="RichTextLabel" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0277778
anchor_top = 0.0987654
anchor_right = 0.499132
anchor_bottom = 1.0
offset_right = 1.0
theme_override_font_sizes/normal_font_size = 32
text = "This guide provides all the information you'll need  to be a successful space farmer!"
script = ExtResource("1_yu732")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Background"]
layout_mode = 1
offset_right = 250.0
offset_bottom = 48.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Reference Guide"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Background"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -576.0
offset_top = 64.0
grow_horizontal = 0
grow_vertical = 2

[node name="PlantVBoxContainer" type="VBoxContainer" parent="Background/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 64

[node name="LettuceBtn" type="Button" parent="Background/ScrollContainer/PlantVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
text = "Lettuce (Lactuca sativa)"

[node name="RadishBtn" type="Button" parent="Background/ScrollContainer/PlantVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
text = "Radish (Raphanus raphanistrum) "

[node name="ChivesBtn" type="Button" parent="Background/ScrollContainer/PlantVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
text = "Chives (Allium schoenoprasum)"

[node name="PotatoBtn" type="Button" parent="Background/ScrollContainer/PlantVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
text = "Potato (Solanum tuberosum)"

[node name="TomatoBtn" type="Button" parent="Background/ScrollContainer/PlantVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
text = "Tomato (Solanum lycopersicum)"

[node name="WheatBtn" type="Button" parent="Background/ScrollContainer/PlantVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
text = "Wheat (Triticum aestivum)"

[connection signal="pressed" from="Background/ScrollContainer/PlantVBoxContainer/LettuceBtn" to="Background/ReferenceGuideText" method="_on_plant_1_pressed" binds= ["btn-1"]]
[connection signal="pressed" from="Background/ScrollContainer/PlantVBoxContainer/RadishBtn" to="Background/ReferenceGuideText" method="_on_plant_2_pressed" binds= ["btn-2"]]
[connection signal="pressed" from="Background/ScrollContainer/PlantVBoxContainer/ChivesBtn" to="Background/ReferenceGuideText" method="_on_plant_3_pressed" binds= ["btn-3"]]
[connection signal="pressed" from="Background/ScrollContainer/PlantVBoxContainer/PotatoBtn" to="Background/ReferenceGuideText" method="_on_plant_4_pressed" binds= ["btn-4"]]
[connection signal="pressed" from="Background/ScrollContainer/PlantVBoxContainer/TomatoBtn" to="Background/ReferenceGuideText" method="_on_plant_5_pressed" binds= ["btn-5"]]
[connection signal="pressed" from="Background/ScrollContainer/PlantVBoxContainer/WheatBtn" to="Background/ReferenceGuideText" method="_on_plant_6_pressed" binds= ["btn-6"]]
